Add Angular photo list component

--- a/locales/sample_en.json
+++ b/locales/sample_en.json
@@ -1,4 +1,5 @@
 {
 	"sample_title": "Sample Page",
+	"list_title": "Interesting Photos",
 	"sample_message": "Sample page using the currently available controls."
 }
